# at89prog

./: .bzrignore  .cvsignore  AUTHORS  COPYING  ChangeLog  INTERNALS  Makefile  Makefile.settings.in  SPI1.dia  TODO  UPGRADING  at89prog-gtk.c  at89prog.1  at89prog.c  at89prog.tex  at89progrc.5  at89progrc.example  at89progrc.ftdi  at89progrc.serial  at89ser.c  at89ser.h  bzrtags  config.h  configure.ac  delays.c  delays.h  delaytest.c  hexfile.c  hexfile.h  pins-ftdi.c  pins-parallel.c  pins-serial-raw.c  pins-serial.c  pins.c  pins.h  prog1.c
debian/: changelog  control  copyright  dirs  files  rules  substvars
